--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -9,5 +9,6 @@ defaults:
       path: ""
     values:
       layout: "default"
-      image: "/img/icon.png"
+      image:
+        path: /img/icon.png
 
