20210602 twitter card update

--- a/config.toml
+++ b/config.toml
@@ -17,7 +17,7 @@ googleAnalytics = "" # Enable Google Analytics by entering your tracking id
   opengraph = true
   twitter_cards = true
   title = "思兼堂" # for twitter cerd (og:site_name)
-  images = ["img/placeholder.png"]
+  images = ["placeholder.png"]
   readmore = false # Show "Read more" button in list if true
   authorbox = false
   pager = true
