--- a/config.toml
+++ b/config.toml
@@ -4,7 +4,7 @@ languageCode = "ja-JP"
 paginate = "10" # Number of posts per page
 theme = "mainroad"
 publishDir = "docs" # Where to output the build
-disqusShortname = "" # Enable comments by entering your Disqus shortname
+disqusShortname = "omoikanedo" # Enable comments by entering your Disqus shortname
 googleAnalytics = "" # Enable Google Analytics by entering your tracking id
 
 [Author]
